--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = ke.settings
+default = fang.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = ke
+project = fang
