--- a/ke_crawler/scrapy.cfg
+++ b/ke_crawler/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = fang.settings
+default = ke_crawler.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = fang
+project = ke_crawler
