--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ scrapy-fake-useragent = "^1.4.4"
 psycopg2 = "^2.9.3"
 SQLAlchemy = "^1.4.39"
 sentry-sdk = "^1.7.2"
+tqdm = "^4.64.0"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 
